[modify]更新公司简介 和 常见问题 页面的文字

--- a/taixinkanghu/src/main/res/layout/activity_company_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_company_info.xml
@@ -1,52 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical">
 
-    <include layout="@layout/include_header" />
+	<include layout="@layout/include_header"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+	<ScrollView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="60dp"
-            android:background="@mipmap/logo_img" />
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center_horizontal"
+			android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:layout_marginTop="10dp"
-            android:text="v1.1 for Android"
-            android:textColor="@color/text_color_gray"
-            android:textSize="18.0sp" />
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginRight="10dp"
+				android:layout_marginTop="60dp"
+				android:background="@mipmap/logo_img"/>
 
-        <LinearLayout
-            android:id="@id/item2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp">
+			<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="40dp"
+				android:layout_marginTop="10dp"
+				android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_weight="1.0"
-                android:text="泰心康护是一家专注于康复护理产业资源整合的服务性公司......"
-                android:textColor="@color/text_color_black"
-                android:textSize="16.0sp" />
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="v1.0"
+					android:textColor="@color/text_color_gray"
+					android:textSize="18.0sp"/>
 
-        </LinearLayout>
-    </LinearLayout>
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text=" for Android"
+					android:textColor="@color/text_color_gray"
+					android:textSize="18.0sp"/>
+
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:id="@id/item2"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center_vertical"
+				android:orientation="horizontal"
+				android:paddingBottom="15dp"
+				android:paddingTop="15dp">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginLeft="30dp"
+					android:layout_marginRight="30dp"
+					android:layout_weight="1.0"
+					android:text="@string/company_info_text"
+					android:textColor="@color/text_color_black"
+					android:textSize="16.0sp"/>
+
+			</LinearLayout>
+		</LinearLayout>
+	</ScrollView>
 </LinearLayout>
