--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -1,68 +1,75 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <style name="AppTheme" parent="@android:style/Theme.Light.NoTitleBar" />
+
+	<style name="AppTheme" parent="@android:style/Theme.Light.NoTitleBar"/>
 
 
-    <style name="MyProgressDialog" parent="@android:style/Theme.Dialog">
+	<style name="MyProgressDialog" parent="@android:style/Theme.Dialog">
 
-        <item name="android:windowBackground">@android:color/transparent</item>
+		<item name="android:windowBackground">@android:color/transparent</item>
 
-        <item name="android:windowFrame">@null</item>
+		<item name="android:windowFrame">@null</item>
 
-        <item name="android:windowNoTitle">true</item>
+		<item name="android:windowNoTitle">true</item>
 
-        <item name="android:windowIsFloating">true</item>
+		<item name="android:windowIsFloating">true</item>
 
-        <item name="android:windowIsTranslucent">false</item>
+		<item name="android:windowIsTranslucent">false</item>
 
-        <item name="android:backgroundDimEnabled">false</item>
+		<item name="android:backgroundDimEnabled">false</item>
 
-    </style>
+	</style>
 
-    <style name="home_radio_button_style">
+	<style name="my_edittext_style" parent="@android:style/Widget.EditText">
 
-        <item name="android:textSize">16.0sp</item>
+		<item name="android:background">@drawable/bg_edittext</item>
 
-        <item name="android:textColor">@color/main_color</item>
+	</style>
 
-        <item name="android:gravity">center</item>
+	<style name="home_radio_button_style">
 
-        <item name="android:layout_gravity">center_horizontal</item>
+		<item name="android:textSize">16.0sp</item>
 
-        <item name="android:background">@null</item>
+		<item name="android:textColor">@color/main_color</item>
 
-        <item name="android:layout_width">0.0dip</item>
+		<item name="android:gravity">center</item>
 
-        <item name="android:layout_height">match_parent</item>
+		<item name="android:layout_gravity">center_horizontal</item>
 
-        <item name="android:button">@null</item>
+		<item name="android:background">@null</item>
 
-        <item name="android:layout_weight">1.0</item>
+		<item name="android:layout_width">0.0dip</item>
 
-    </style>
+		<item name="android:layout_height">match_parent</item>
 
-    <style name="umeng_fb_image_dialog_anim">
+		<item name="android:button">@null</item>
 
-    </style>
+		<item name="android:layout_weight">1.0</item>
 
-    <style name="umeng_fb_speech_dialog_style" parent="@android:style/Theme.Dialog">
+	</style>
 
-        <item name="android:windowBackground">@android:color/transparent</item>
+	<style name="umeng_fb_image_dialog_anim">
 
-        <item name="android:backgroundDimEnabled">false</item>
+	</style>
 
-    </style>
+	<style name="umeng_fb_speech_dialog_style" parent="@android:style/Theme.Dialog">
 
-    <style name="dateStyle">
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">16sp</item>
-    </style>
+		<item name="android:windowBackground">@android:color/transparent</item>
 
-    <style name="main_bar_text_style">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
-    </style>
+		<item name="android:backgroundDimEnabled">false</item>
+
+	</style>
+
+	<style name="dateStyle">
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">fill_parent</item>
+		<item name="android:layout_weight">1</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">16sp</item>
+	</style>
+
+	<style name="main_bar_text_style">
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textStyle">bold</item>
+		<item name="android:textSize">18sp</item>
+	</style>
 </resources>
